# wg21-cust-points

./: D2547.md  README.md  examples.md
examples/: find_niebloid_final.md
popcorn/: BUILD.bazel  README.md  check_readme.sh  popcorn.py
popcorn/test/: BUILD.bazel  dry_run.sh  expand.sh  extract_targets.sh  in.cpp  unit.py
popcorn/test/expected/: first.first.1.OK.cpp  first.first.2.Error.cpp  first.first.3.Error.cpp  first.second.4.Error.cpp  first.second.5.OK.cpp  first.second.6.Error.cpp
tests/: 001_basics.cpp  002_noexcept.cpp  003_generic.cpp  004_multiple_prototypes.cpp  005_var_template.cpp  006_var_template_coexist.cpp  007_prototype_deduction.cpp  008_var_template_type_traits.cpp  009_resolve_overload_trait.cpp  010_final.cpp
