py_library(
    name = "popcorn",
    srcs = ["popcorn.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "pop",
    srcs = ["popcorn.py"],
    main = "popcorn.py",
    visibility = ["//visibility:public"],
)

sh_test(
    name = "check_readme",
    srcs = ["check_readme.sh"],
    data = [
        "README.md",
        ":pop",
    ],
)
